feat: 針對PNG壓縮 進行調優